networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__to__minio__egress__ports__9000__nr40__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-apisix--to--minio--egress--ports--9000--nr40
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: minio
    ports:
    - protocol: TCP
      port: 9000
